For a few paths, added the primary key as a optional path parameter instead of creating a path for a single query
