# src/routes/client.router.ts
@@ -4,10 +4,10 @@ import ClientController from "../controllers/client.controller";
 const router = express.Router();
 
 //set up the localhost:8000/client/ for a GET request
-router.get("/", async (_req, res) => {
+router.get("/:clientCode?", async (_req, res) => {
   try {
     const controller = new ClientController();
-    const response = await controller.getClients(Number(_req.query.offset), Number(_req.query.limit));
+    const response = await controller.getClients(Number(_req.query.offset), Number(_req.query.limit), _req.params.clientCode);
 
     res.setHeader('Content-Type', 'application/json');
     return res.send(response);
@@ -33,21 +33,6 @@ router.post("/", async (req, res) => {
   }
 });
 
-/**
- * set up the localhost:8000/client/:client for a GET request based on the URL parameter
- */
-router.get("/:clientCode", async (req, res) => {
-  try {
-    const controller = new ClientController();
-    const response = await controller.getClient(req.params.clientCode);
-    res.setHeader('Content-Type', 'application/json');
-    return res.send(response);
-  } catch (err)
-  {
-    console.log(err);
-    res.status(404).send({ message: "No client found" });
-  }
-});
 
 router.delete("/:clientCode", async (req, res) => {
   try {
